log
Thu, Mar 27, 2025  5:22:41 PM: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
25021aa
Thu, Mar 27, 2025  5:31:01 PM: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
7726278
Thu, Mar 27, 2025  5:32:43 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
29ad3ae
Thu, Mar 27, 2025  5:36:10 PM: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
8817257
Thu, Mar 27, 2025  5:40:19 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
1b897d8
Thu, Mar 27, 2025  5:40:45 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d6db76c
Thu, Mar 27, 2025  5:42:13 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b64ae9b
Thu, Mar 27, 2025  5:43:10 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
c0e87e7
Thu, Mar 27, 2025  5:45:42 PM: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
bb82f92
Thu, Mar 27, 2025  5:47:11 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
451be1e
Thu, Mar 27, 2025  5:52:14 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:66:12: error: 'createNode' redeclared as different kind of symbol
     Node * createNode = (Node*)malloc(sizeof(Node));
            ^~~~~~~~~~
list.c:22:8: note: previous definition of 'createNode' was here
 Node * createNode(void * data) {
        ^~~~~~~~~~
list.c:66:12: error: unused variable 'createNode' [-Werror=unused-variable]
     Node * createNode = (Node*)malloc(sizeof(Node));
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6971991
Thu, Mar 27, 2025  5:52:31 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
a5a03f6
Thu, Mar 27, 2025  5:53:40 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3bcdf9b
Thu, Mar 27, 2025  5:54:45 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
1212594
Thu, Mar 27, 2025  6:10:57 PM: 
 list.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
72bfe0d
Thu, Mar 27, 2025  6:14:08 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
d2162cc
Thu, Mar 27, 2025  6:16:07 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
3f9c047
Thu, Mar 27, 2025  6:17:50 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
3428808
Thu, Mar 27, 2025  9:32:52 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
534b11b
Thu, Mar 27, 2025  9:41:45 PM: 
 tests:  10|2
total_score: 45/70
efda7ca
Thu, Mar 27, 2025  9:51:32 PM: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:94:38: error: 'return' with a value, in function returning void [-Werror]
     if(list->current == NULL) return NULL;
                                      ^~~~
list.c:88:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
bc0d117
Thu, Mar 27, 2025 10:07:20 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:94:69: error: 'return' with a value, in function returning void [-Werror]
     if(list->current == NULL || list->current->next == NULL) return NULL;
                                                                     ^~~~
list.c:88:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2923a16
Thu, Mar 27, 2025 10:08:45 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
1d7e08f
Thu, Mar 27, 2025 10:35:06 PM: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  10|2
total_score: 45/70
50656bf
Thu, Mar 27, 2025 10:39:34 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
0a05bc6
Thu, Mar 27, 2025 10:40:27 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|1
total_score: 55/70
754e37c
